# padauk

./: .gitignore  README.md
example/: .gitignore
padauk/: .gitignore  (+1 more)
padauk-cli/: Cargo.toml
padauk-cli/script/: build.sh
padauk-cli/src/: assets.rs  main.rs
padauk-cli/template/android/: settings.gradle.kts
padauk-cli/template/android/app/: build.gradle.kts
padauk-cli/template/android/app/src/main/: AndroidManifest.xml
padauk-cli/template/android/app/src/main/java/com/example/padauk/: MainActivity.kt
padauk-cli/template/android/app/src/test/java/com/example/padauk/: ExampleUnitTest.kt
padauk-cli/template/android/gradle/: libs.versions.toml
padauk-cli/template/ios/Template/: ContentView.swift
padauk-cli/template/ios/Template.xcodeproj/: project.pbxproj
padauk-cli/template/ios/Template.xcodeproj/project.xcworkspace/xcuserdata/aungthuya.xcuserdatad/: UserInterfaceState.xcuserstate
padauk-cli/template/ios/Template.xcodeproj/xcuserdata/aungthuya.xcuserdatad/xcschemes/: xcschememanagement.plist
padauk-cli/template/rust/: Cargo.toml  uniffi.toml
padauk-cli/template/rust/.cargo/: config.toml
padauk-cli/template/rust/src/: lib.rs
padauk-cli/templates/android/: PadaukRenderer.kt
padauk/padauk/: Cargo.toml  uniffi.toml
padauk/padauk/assets/android/: padauk-release.aar
padauk/padauk/src/: lib.rs
padauk/padauk/src/native/: android_ui_node.rs  ios_ui_node.rs  log.rs  mod.rs  platform.rs
padauk/padauk/src/ui/: app_bar.rs  button.rs  card.rs  chip.rs  color.rs  event_registry.rs  image.rs  layout.rs  macros.rs  mod.rs  modifier.rs  navigation.rs  render_callback.rs  state.rs  widget.rs
(+82 files in other folders)
