[package]
name = "padauk-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.2"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
fs_extra = "1.3.0"
include_dir = "0.7.4"
serde_json = "1.0.149"
toml = "0.9.11"
uniffi_bindgen = "0.31"
zip = "7.2.0"
