[package]
name = "padauk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
embed-assets = []

[dependencies]
log = "0.4.29"
uniffi = { version = "0.30.0", features = ["cli"] }
uuid = { version = "1.19.0", features = ["v4"] }
padauk_macros = { path = "../padauk-macros" }
thiserror = "2.0.18"

# Only enable android_logger when compiling for Android
[target.'cfg(not(target_os = "ios"))'.dependencies]
android_logger = "0.15.1"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"]}

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
